--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
-pandas
-numpy
-requests
-ta
-xgboost
-scikit-learn
-flask
-python-dotenv
-python-telegram-bot==20.7
-web3>=6.0.0
+aiohttp
 apexomni
-ecdsa
+asyncio
+flask
+mpmath
+numpy
+pandas
+python-dateutil
+python-dotenv
+requests
+scikit-learn
+ta
+telegram
+urllib3
+web3
+xgboost
+python-telegram-bot==20.7
 
