--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,5 @@
+Flask
 aiohttp
-apexomni
-asyncio
-flask
-mpmath
-numpy
-pandas
-python-dateutil
-python-dotenv
-requests
-scikit-learn
-ta
-telegram
-urllib3
 web3
-xgboost
-python-telegram-bot==20.7
-ecdsa
-sympy==1.12
-
+python-dotenv
+gunicorn
